Fix some alignment issues with SPC traits/conditions, and greyscale suppressed SPC conditions

--- a/display/shared/styling/parts/spc-sheets.less
+++ b/display/shared/styling/parts/spc-sheets.less
@@ -73,6 +73,7 @@
 
     .item-controls {
       text-align: right;
+      flex-grow: 0;
     }
   }
 }
